--- a/SabihaninBlogProjesi/SabihaninBlogProjesi/Areas/Areas/Views/Ana/Index.cshtml
+++ b/SabihaninBlogProjesi/SabihaninBlogProjesi/Areas/Areas/Views/Ana/Index.cshtml
@@ -10,10 +10,10 @@ The markup will have a list with images and the titles-->
     <ul>
         <li>
             <div class="image_title">
-                <a href="#">@item.kon.KonuBaslik</a>
+                <a href="#">@item.k.AdSoyad</a>
             </div>
             <a href="#">
-                <img src=@item.kon.KonuResim />
+                <img src=@item.m.Icerik />
             </a>
         </li>
         @*<li>
