--- a/SabihaninBlogProjesi/SabihaninBlogProjesi/Views/Makale/Index.cshtml
+++ b/SabihaninBlogProjesi/SabihaninBlogProjesi/Views/Makale/Index.cshtml
@@ -1,33 +1,37 @@
 ﻿@model IEnumerable<DomainEntity.Models.Makale>
 
+@{
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
+}
+
+<h2>Index</h2>
+
 <p>
-    @Html.ActionLink("Create New", "MakaleEkle")
+    @Html.ActionLink("Create New", "Create")
 </p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Baslik)
+            @Html.DisplayNameFor(model => model.Kategori.Adi)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Tanım)
+            @Html.DisplayNameFor(model => model.Baslik)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Icerik)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MakaleResim)
+            @Html.DisplayNameFor(model => model.EklenmeTarihi)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MakaleVideo)
+            @Html.DisplayNameFor(model => model.GoruntulenmeSayisi)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.MakaleMuzik)
+            @Html.DisplayNameFor(model => model.Begeni)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.EklemeTarihi)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.YazarEmail)
+            @Html.DisplayNameFor(model => model.KullaniciID)
         </th>
         <th></th>
     </tr>
@@ -35,49 +39,32 @@
 @foreach (var item in Model) {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Baslik)
+            @Html.DisplayFor(modelItem => item.Kategori.Adi)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Tanım)
+            @Html.DisplayFor(modelItem => item.Baslik)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Icerik)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.MakaleResim)
+            @Html.DisplayFor(modelItem => item.EklenmeTarihi)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.MakaleVideo)
+            @Html.DisplayFor(modelItem => item.GoruntulenmeSayisi)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.MakaleMuzik)
+            @Html.DisplayFor(modelItem => item.Begeni)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.EklemeTarihi)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.YazarEmail)
+            @Html.DisplayFor(modelItem => item.KullaniciID)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.MakaleID }) |
             @Html.ActionLink("Details", "Details", new { id=item.MakaleID }) |
-            <a onclick="sil(this)" data-id="@item.MakaleID">Sil</a>
+            @Html.ActionLink("Delete", "Delete", new { id=item.MakaleID })
         </td>
     </tr>
-
 }
 
 </table>
-<script>
-    function sil(hangibuton) {
-        var id = $(hangibuton).attr("data-id");
-            $.ajax({
-                url: "/Makale/MakaleSil",
-                method: "POST",
-                data: { "id": id },
-                success: function () {
-                    $(hangibuton).parent().parent().slideUp();
-                }
-            })
-    }
-</script>
